flux/infrastructure/int/backrest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backrest
  labels:
    app.kubernetes.io/name: backrest
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: backrest
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backrest
    spec:
      containers:
        - name: backrest
          image: ghcr.io/garethgeorge/backrest:v1.14.1-alpine
          ports:
            - name: http
              containerPort: 9898
              protocol: TCP
          volumeMounts:
            - name: k3s-volumes-bp
              mountPath: /repos
            - name: k3s-books
              mountPath: /volumes/books
            - name: k3s-camera
              mountPath: /volumes/camera
            - name: k3s-games-bp
              mountPath: /volumes/games-bp
            - name: k3s-movies-bp
              mountPath: /volumes/movies-bp
            - name: k3s-music-bp
              mountPath: /volumes/music-bp
            - name: k3s-special
              mountPath: /volumes/special
            - name: k3s-private
              mountPath: /volumes/private
            - name: k3s-series-bp
              mountPath: /volumes/series-bp
            - name: k3s-videos
              mountPath: /volumes/videos
            - name: backrest-data
              mountPath: /data
          resources:
            requests:
              memory: "256Mi"
              cpu: "50m"
            limits:
              memory: "4Gi"
      volumes:
        - name: backrest-data
          persistentVolumeClaim:
            claimName: backrest-data-pvc
        - name: k3s-volumes-bp
          persistentVolumeClaim:
            claimName: k3s-volumes-bp-pvc
        - name: k3s-books
          persistentVolumeClaim:
            claimName: k3s-books-pvc
        - name: k3s-camera
          persistentVolumeClaim:
            claimName: k3s-camera-pvc
        - name: k3s-games-bp
          persistentVolumeClaim:
            claimName: k3s-games-bp-pvc
        - name: k3s-movies-bp
          persistentVolumeClaim:
            claimName: k3s-movies-bp-pvc
        - name: k3s-music-bp
          persistentVolumeClaim:
            claimName: k3s-music-bp-pvc
        - name: k3s-special
          persistentVolumeClaim:
            claimName: k3s-special-pvc
        - name: k3s-private
          persistentVolumeClaim:
            claimName: k3s-private-pvc
        - name: k3s-series-bp
          persistentVolumeClaim:
            claimName: k3s-series-bp-pvc
        - name: k3s-videos
          persistentVolumeClaim:
            claimName: k3s-videos-pvc
