flux/infrastructure/int/backrest/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backrest-svc
  labels:
    app.kubernetes.io/name: backrest
spec:
  selector:
    app.kubernetes.io/name: backrest
  type: ClusterIP
  ports:
    - port: 9898
      name: http
      targetPort: http
      protocol: TCP
